language/move-lang/tests/move_check/translated_ir_tests/commands/assign_resource.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/assign_resource.move:6:9 ───
   │
 6 │         t = T {}; &t;
   │         ^ Invalid assignment to local 't'
   ·
 5 │         let t = T{}; &t;
   │             - The local contains a resource value due to this assignment. The resource must be used before you assign to this local again
   │

error: 

   ┌── tests/move_check/translated_ir_tests/commands/assign_resource.move:6:21 ───
   │
 6 │         t = T {}; &t;
   │                     ^ Invalid return
   ·
 6 │         t = T {}; &t;
   │         - The local 't' still contains a resource value due to this assignment. The resource must be consumed before the function returns
   │

